Fixed missing margins

--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -42,6 +42,8 @@ body {
     max-width: 1000px;
     color: $font-color;
     margin-bottom: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 
     img {
         margin-top: 30px;
